LYB-001716-300x600 *Used only scale property to scale the logo img *Fixed overlapping issue of  lybalvi logo and victoria image *Removed extra spacing from html, css and js files *Removed extra spacing present at the bottom from ISI text

--- a/LYB-001716/300x600/300x600/css/styles.css
+++ b/LYB-001716/300x600/300x600/css/styles.css
@@ -10,7 +10,6 @@ a:link, a:visited, #isi-header-text a#pi{color:#ffffff; cursor:pointer; text-dec
 #cover{left:0; overflow:hidden; top:0;}
 #hotspot{cursor:pointer; left:0; top:0;}
 *{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;}
-
 /* Global CSS for ISI content */
 #isi{overflow:hidden;}
 a#isipi{color:#00467f !important;}
@@ -18,17 +17,17 @@ a#isipi{color:#00467f !important;}
 #isi-text sup{font-size:11px; vertical-align:top;}
 #isi-text b{font-family:'Arial'; font-weight:700;}
 #isi-text a{color:#45474D;}
-
 /* 300x600 - CSS for ISI content */
 #dim300x600 #isi{height:145px; left:0; top:470px; width:299px;}
 #dim300x600 #isi-header-text{background:#fff; z-index:1; font-weight:700; color:#114796; top:2px; height:16px; width:285px; font-size:14px; font-weight:bold; letter-spacing:-0.31px; line-height:16px; padding:5px 8px;}
-#dim300x600 #isi-text-holder{height:98px; opacity:1; overflow-x:hidden; overflow-y:scroll; top:28px; width:293px;}
+#dim300x600 #isi-text-holder{height:102px; opacity:1; overflow-x:hidden; overflow-y:scroll; top:28px; width:293px;}
 #dim300x600 #isi-text{font-size:11px; color:#45474D; line-height:14px; font-weight:400; padding:1px 0 0 8px; letter-spacing:0;}
 #dim300x600 #isi-text header{color:#114796; font-size:12px; font-family:'Arial'; font-weight:700; letter-spacing:normal;}
 #dim300x600 #isi-text header + p{letter-spacing:normal;}
 #dim300x600 #isi-text .reg-mark{line-height:100%; font-size:smaller;}
 #dim300x600 #isi-text ul{padding-left:9px; padding-top:5px; margin:0; letter-spacing:normal;}
 #dim300x600 #isi-text p{padding-top:3px; margin:0;}
+#dim300x600 #isi-text p:last-child{padding-top:0;}
 #dim300x600 #isi-text .space-top{letter-spacing:-0.24px;}
 #dim300x600 #isi-text .remove-bullet::before{display:none;}
 #dim300x600 #isi-text .remove-bullet ul{padding-left:11px;}
@@ -39,7 +38,6 @@ a#isipi{color:#00467f !important;}
 #dim300x600 #isi-text li{padding-bottom:3px; position:relative;}
 #dim300x600 #isi-text .alk-logo{padding-top:10px;}
 #dim300x600 #isi-text .alk-logo span{background:url(../images/300x600_alkermes-logo.jpg) no-repeat; background-size:contain; width:116px; height:30px; display:inline-block;}
-
 /* Custom CSS for #dim300x600 */
 #dim300x600 #cover, #dim300x600 #hotspot{width:300px; height:600px;}
 #dim300x600 #background{background:linear-gradient(315deg, #7CC7EF 0%, #20B9F5 33.29%, #0091E6 66.63%, #096CBE 100%); top:0; left:0; width:300px; height:480px;}
@@ -58,7 +56,6 @@ a#isipi{color:#00467f !important;}
 #dim300x600 #cta, #dim300x600 #text-one, #dim300x600 #disclaimer{letter-spacing:0;}
 #dim300x600 #text-one,#dim300x600 #text-two, #dim300x600 #text-three, #dim300x600 #cta{font-family:'fieldwork-hum';}
 #dim300x600 #text-two, #dim300x600 #text-three, #dim300x600 #isi-indicator-text, #dim300x600 #cta{font-weight:bold;}
-
 /* Safari specific css */
 @supports selector(:nth-child(1 of x)) {
   #dim300x600 #text-one{top:247px;}
@@ -66,13 +63,11 @@ a#isipi{color:#00467f !important;}
   #dim300x600 #cta{padding:8px 12px 10px;}
   #dim300x600 #cta img{transform:translate(58%, -56px);}
 }
-
 /* MAC Chrome specific css */
 #dim300x600 .mac-chrome #text-one{top:247px;}
 #dim300x600 .mac-chrome #text-two, #dim300x600 .mac-chrome #text-three{top:313px;}
 #dim300x600 .mac-chrome #cta{padding:8px 12px 10px;}
 #dim300x600 .mac-chrome #cta img{transform:translate(58%, -56px);} 
-
 /* Firefox specific css */
 @supports (-moz-appearance:none) {
   #dim300x600 #isi-text{letter-spacing:normal;} 
